--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CV</title>
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <h1>Mon CV</h1>
