--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CV</title>
+    <title>C.V.</title>
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
